<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/numberOfPeopleInput"
        android:layout_width="110dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/numberOfPeopleTextView"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/totalBillInput"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/totalBillTextView"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tipPercentageInput"
        android:layout_width="110dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/tipPercentageTextView"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".50" />

    <TextView
        android:id="@+id/tipPercentageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/tipPercentageTextView"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/numberOfPeopleTextView"
        app:layout_constraintEnd_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/totalBillTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/totalBillTextView"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tipPercentageTextView"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.941" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/stringButton"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/output"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/numberOfPeopleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/numberOfPeopleTextView"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/calculateButton"
        app:layout_constraintEnd_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/output"
        android:layout_width="228dp"
        android:layout_height="71dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculateButton" />

</androidx.constraintlayout.widget.ConstraintLayout>